--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "promocion",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@mui/material": "^5.2.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
