--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "promocion",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://exalumnossantarosachosicapromo98.com",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@mui/material": "^5.2.7",
+    "@mui/material": "^5.3.1",
+    "@mui/styled-engine": "^5.3.0",
+    "@mui/styles": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
